...
            text = stringResource(Res.string.location_detail_action_beacon),
            talkbackHint = stringResource(Res.string.location_detail_action_beacon_hint),
            color = MaterialTheme.colorScheme.onSurface,
            modifier = Modifier
                .defaultMinSize(minHeight = spacing.targetSize)
                .fillMaxWidth()
                .testTag("locationDetailsStartBeacon")
        ) {
            onStartBeacon(locationDescription.location, locationDescription.name)
        }

        // Edit or save marker
        if (locationDescription.databaseId != 0L && onEditMarker != null) {
...
                text = stringResource(Res.string.markers_edit_screen_title_edit),
                talkbackHint = stringResource(Res.string.location_detail_action_edit_hint),
                color = MaterialTheme.colorScheme.onSurface,
                modifier = Modifier
                    .defaultMinSize(minHeight = spacing.targetSize)
                    .fillMaxWidth()
                    .testTag("locationDetailsEditMarker")
            ) {
                onEditMarker(locationDescription)
            }
        } else if (onSaveMarker != null && locationDescription.databaseId == 0L) {
            IconWithTextButton(
                icon = Icons.Filled.AddLocation,
                text = stringResource(Res.string.universal_links_alert_action_marker),
                talkbackHint = stringResource(Res.string.location_detail_action_save_hint),
                color = MaterialTheme.colorScheme.onSurface,
                modifier = Modifier
                    .defaultMinSize(minHeight = spacing.targetSize)
                    .fillMaxWidth()
                    .testTag("locationDetailsSaveAsMarker")
            ) {
                onSaveMarker(locationDescription)
            }
        }

        // Street preview
...
