...
                                drawerState.open()
                            } else {
                                drawerState.close()
                            }
                        }
                    },
                    modifier = Modifier.testTag("menuDrawerBack")
                ) {
                    Icon(
                        Icons.AutoMirrored.Rounded.ArrowBack,
                        modifier =
                            Modifier
                                .size(spacing.targetSize)
...
                    onClick = {
                        scope.launch { drawerState.close() }
                        startTutorial()
                    },
                    label = stringResource(R.string.menu_audio_tutorial),
                    Icons.Rounded.Headphones,
                    modifier = Modifier.testTag("menuAudioTutorial")
                )

                DrawerMenuItem(
                    onClick = { rateSoundscape() },
                    label = stringResource(R.string.menu_rate),
                    icon = Icons.Rounded.Star,
...
